--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "author": "alphasec",
   "license": "MIT",
-   "dependencies": {
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
